--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -128,8 +128,8 @@ nav ul li a:hover::after {
      margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #b54769;
-    font-size: 14px;
+    color: #c40843;
+    font-size: 25px;
 }
 .tab-contents{
     display: none;
