--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -332,11 +332,11 @@ footer i{
 nav .fa-solid{
     display: none;
 }
-@media only screen and (max-width:600px){
+@media only screen and (max-width:800px){
     #header{
         background-image: url(asset/img/background1.jpeg);
         background-size: 110%; /* Ensure the image covers the header area */
-        background-position: center bottom;
+        background-position: center;
         
       
     }
@@ -388,6 +388,9 @@ nav .fa-solid{
     .tab-links{
         font-size: 16px;
         margin-right: 20px; 
+    }
+    .psize{
+        font-size: 13px;
     }
     .contact-left,.contact-right{
         flex-basis: 100%;
